--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
 }
 body {
     background-color:#EEE;
-    font-family:'Lato',Helvetica,Arial;
+    /* font-family:'Lato',Helvetica,Arial; */
+    font-family: 'Roboto Condensed', sans-serif;
     font-size:15px;
     display:flex;
     margin:0;
@@ -24,6 +25,11 @@ header {
     justify-content: flex-end;
     align-items: center;
 }
+.header-labrenfa {
+    display: block;
+    width: 100%;
+    margin-bottom:50px;
+}
 .menu-openner {
     margin-right: 15px;
     font-size: 26px;
@@ -42,11 +48,12 @@ header {
 }
 
 aside {
-    background-color:#9ccbe6;
+    background-color:#000;
     width:0vw;
     font-family:'Franklin Gothic';
     transition:all ease .2s;
     overflow-x:hidden;
+    color:#fff;
 }
 aside.show {
     width:30vw;
@@ -59,7 +66,7 @@ aside.show {
 
 main {
     flex:1;
-    padding:20px;
+    
 }
 h1 {
     font-family:'Franklin Gothic'; 
@@ -67,6 +74,10 @@ h1 {
 .prod-area {
     display:grid;
     grid-template-columns: repeat(3, 1fr);
+    padding: 25px;
+}
+.desconto {
+    color: #ffd400;
 }
 .prod-item {
     text-align: center;
@@ -274,9 +285,12 @@ h1 {
     margin:10px 0;
 }
 .cart--item img {
-    width:40px;
-    height:40px;
-    margin-right:20px;
+    width: 60px;
+    height: 60px;
+    margin-right: 20px;
+    background: #fff;
+    border-radius: 51px;
+    padding: 7px;
 }
 .cart--item-nome {
     flex:1;
@@ -304,36 +318,258 @@ h1 {
     color:#000;
 }
 .cart--totalitem {
-    padding:15px 0;
-    border-top:1px solid #79b9dd;
-    color:#38393a;
-    display:flex;
+    padding: 15px 0;
+    border-top: 1px solid #ffffff78;
+    display: flex;
     justify-content: space-between;
-    font-size:15px;
+    font-size: 15px;
 }
 .cart--totalitem span:first-child {
     font-weight: bold;
 }
 .cart--totalitem.big {
     font-size:20px;
-    color:#000;
+   
     font-weight: bold;
 }
-.cart--finalizar {
-    padding:20px 30px;
-    border-radius:20px;
-    background-color:#32a345;
-    color:#FFF;
-    cursor:pointer;
-    text-align:center;
-    margin-top:20px;
-    border:2px solid #63f77c;
+/* .cart--finalizar {
+    padding: 20px 30px;
+    border-radius: 10px;
+    background-image: linear-gradient(45deg, #2b923c, #28af3f);
+    color: #FFF;
+    cursor: pointer;
+    text-align: center;
+    margin-top: 20px;
     transition: all ease .2s;
+    font-size: 2rem;
 }
 .cart--finalizar:hover {
-    background-color:#35af4a;
-}
+    background-image: linear-gradient(45deg, #28af3f, #2b923c);
+} */
 
+
+/* BUTTON COMPRAR NEW ANIMATION */
+*, *:before, *:after {
+    margin: 0; 
+      padding: 0; 
+      outline: none; 
+      -webkit-box-sizing: border-box; 
+      -moz-box-sizing: border-box; 
+      -ms-box-sizing: border-box; 
+      -o-box-sizing: border-box; 
+      box-sizing: border-box; 
+      font-size:100%; 
+      vertical-align:baseline; 
+      background:transparent;
+    -webkit-transition: all .2s linear;
+    -moz-transition: all .2s linear;
+    -ms-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear;
+  }
+  
+    
+  
+    .buy, .download {
+      display: -webkit-flex;
+      display: -moz-flex;
+      display: -ms-flex;
+      display: -o-flex;
+      display: flex;
+      -webkit-justify-content: center;
+      -moz-justify-content: center;
+      -ms-justify-content: center;
+      -o-justify-content: center;
+      justify-content: center;
+      -webkit-align-items: center;
+      -moz-align-items: center;
+      -ms-align-items: center;
+      -o-align-items: center;
+      align-items: center;
+      font-family: 'Roboto Condensed', sans-serif;
+    }
+  
+      .buy {
+        margin-top:40px;
+        color: #fff;
+        background-color:#32a345;
+        border: 2px solid #32a345;
+        text-align: center;
+        text-transform: uppercase;
+        font-weight: bold;
+        width: 100%;
+        height:70px;
+        font-size: 15px; 
+        cursor: pointer;
+        position: relative;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        -ms-border-radius: 5px;
+        -o-border-radius: 5px;
+        border-radius: 5px;
+        letter-spacing: 1.3px;
+        -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05), 0 6px 6px rgba(0, 0, 0, 0.04);
+        -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05), 0 6px 6px rgba(0, 0, 0, 0.04);
+        -ms-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05), 0 6px 6px rgba(0, 0, 0, 0.04);
+        -o-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05), 0 6px 6px rgba(0, 0, 0, 0.04);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05), 0 6px 6px rgba(0, 0, 0, 0.04);
+        -webkit-transition: all .2s linear;
+        -moz-transition: all .2s linear;
+        -ms-transition: all .2s linear;
+        -o-transition: all .2s linear;
+        transition: all .2s linear;
+      }
+      .buy i {
+          margin-right:10px;
+      }
+        .buy small {
+          font-weight: 100;
+          font-size: 14px;
+          margin-left: 5px;
+          opacity: .9;
+        }
+  
+        .fa-check, .fa-shipping-fast {
+          display: none;
+          font-size: 17px;
+        }
+  
+        .download {
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          -webkit-transform: translate(-50%, -50%);
+          -moz-transform: translate(-50%, -50%);
+          -ms-transform: translate(-50%, -50%);
+          -o-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+          width: 50px;
+          height: 100%;
+          -webkit-border-radius: 50%;
+          -moz-border-radius: 50%;
+          -ms-border-radius: 50%;
+          -o-border-radius: 50%;
+          border-radius: 50%;
+          background-color: #21d49a;
+          color: #F5F5F5;
+          -webkit-transition: all .1s linear;
+          -moz-transition: all .1s linear;
+          -ms-transition: all .1s linear;
+          -o-transition: all .1s linear;
+          transition: all .1s linear;
+          opacity: 0;
+        }
+  
+        .download, .loading:before {
+          -webkit-opacity: 0;
+          -moz-opacity: 0;
+          -ms-opacity: 0;
+          -o-opacity: 0;
+          opacity: 0;
+          visibility: hidden;
+        }
+  
+          .download.active {
+            -webkit-border-radius: 0;
+            -moz-border-radius: 0;
+            -ms-border-radius: 0;
+            -o-border-radius: 0;
+            border-radius: 0;
+            width: 100%;
+            will-change: opacity, visibility, width, height;
+          }
+  
+            .download.active:after {
+              content: 'Track Package';
+              position: absolute;
+              display: block;
+              margin-left: 12px;
+              white-space: nowrap;
+              font-size: 16px;
+              color: #f5f5f5;
+            }
+  
+            .download.active, .processing:before {
+              -webkit-opacity: 1;
+              -moz-opacity: 1;
+              -ms-opacity: 1;
+              -o-opacity: 1;
+              opacity: 1;
+              visibility: visible;
+            }
+  
+            .fa-shipping-fast {
+              margin-right: auto;
+              margin-left: 18px;
+              font-size: 14px;
+            }
+  
+        .success {
+          color: #21d49a;
+          border-color: #21d49a;
+          will-change: color, border-color;
+        }
+  
+        .loading {
+          cursor: default;
+          height: 15px;
+          color: transparent;
+          will-change: cursor, height, color;
+        }
+  
+          .loading:before {
+            content: 'Só um instante..';
+            position: absolute;
+            top: 0;
+            left: 50%;
+            display: block;
+            margin: 0 auto;
+            white-space: nowrap;
+            font-size: 11.5px;
+            color: rgba(255, 255, 255, 0.808);
+            -webkit-transform: translateX(-50%);
+            -moz-transform: translateX(-50%);
+            -ms-transform: translateX(-50%);
+            -o-transform: translateX(-50%);
+            transform: translateX(-50%);
+            will-change: transform;
+          }
+  
+          .processing:before {
+            top: -20px;
+           }
+  
+          .loading:after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 0%;
+            height: 100%;
+            background-color: #4c4c4c;
+            -webkit-animation: loading 1.5s linear .75s 1 forwards;
+            -moz-animation: loading  1.5s linear .75s 1 forwards;
+            -ms-animation: loading 1.5s linear .75s 1 forwards;
+            -o-animation: loading 1.5s linear .75s 1 forwards;
+            animation: loading 1.5s linear .75s 1 forwards;
+            will-change: width;
+          }
+  
+            @keyframes loading {
+              0% {
+                width: 0%;
+              }
+  
+              50% {
+                width: 50%;
+              }
+  
+              100% {
+                width: 100%;
+              }
+            }
+
+            /* FINAL DO BUTTON COMPRAR */
 @media (max-width:1000px) {
     .prod-area {
         grid-template-columns: repeat(2, 1fr);
